Corrected spacing between card and navbar

--- a/bio1.css
+++ b/bio1.css
@@ -6,14 +6,14 @@ nav {
     background-color: rgb(9, 177, 177);
 }
 
-.about-me {
-    margin-top: 50px;
-    background-color:#FFFFFF;
-    height: 70px;
-    width: auto;
-}
+
 .card-img-top {
     width: 250px;
     height: auto;
     margin-left: 25px;
+    margin-right: 50px;
+}
+
+.card {
+    margin-top: 5rem;
 }
